fix footer on mobile & pc

--- a/themes/academic/layouts/partials/css/academic.css
+++ b/themes/academic/layouts/partials/css/academic.css
@@ -1630,6 +1630,13 @@ footer a#back_to_top i {
   padding-bottom: 0px;
 }
 
+@media screen and (min-width: 1200px) {
+  .site-footer{
+    max-width: 740px;
+    margin: 0 auto;
+  }
+}
+
 
 .dark .site-footer,
 .dark footer a#back_to_top i,
